k8s_yaml/webhook-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validation-webhook
  labels:
    app: webhook
    development: webhook-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook
  template:
    metadata:
      labels:
        app: webhook
    spec:
      containers:
      - name: webhook
        image: webhook:validation
        ports:
        - containerPort: 443
        volumeMounts:
        - name: certs-volume
          readOnly: true
          mountPath: "/certs"
        imagePullPolicy: IfNotPresent
      volumes:
      - name: certs-volume
        secret:
          secretName: admission-tls
