k8s_yaml/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook
spec:
  selector:
    app: webhook
  ports:
  - port: 443
